--- a/extensions/CMakeLists.txt
+++ b/extensions/CMakeLists.txt
@@ -33,6 +33,8 @@ if(APPLE)
     link_directories(/opt/homebrew/opt/zeromq/lib)
     include_directories(/opt/homebrew/opt/leveldb/include)
     link_directories(/opt/homebrew/opt/leveldb/lib)
+    include_directories(/opt/homebrew/opt/openssl/include)
+    link_directories(/opt/homebrew/opt/openssl/lib)
   else()
     include_directories(/usr/local/opt/mysql-client/include)
     link_directories(/usr/local/opt/mysql-client/lib)
@@ -230,16 +232,39 @@ add_library(leveldb_mod SHARED
   ../src/userdata.c
   ../src/value.c)
 
+add_library(random_mod SHARED
+  random.c
+  ../src/array.c
+  ../src/builtin.c
+  ../src/callable.c
+  ../src/check.c
+  ../src/chunk.c
+  ../src/utils.c
+  ../src/error.c
+  ../src/iterable.c
+  ../src/iterator.c
+  ../src/memory.c
+  ../src/module.c
+  ../src/range.c
+  ../src/state.c
+  ../src/string_map.c
+  ../src/string.c
+  ../src/struct.c
+  ../src/userdata.c
+  ../src/value.c)
+
 if(MSVC)
   target_link_libraries(curl_mod PRIVATE CURL::libcurl)
   target_link_libraries(mysql_mod PRIVATE ${MYSQL_LIBRARIES})
   target_link_libraries(zeromq_mod PRIVATE ${ZEROMQ_LIBRARIES})
   target_link_libraries(leveldb_mod PRIVATE ${LEVELDB_LIBRARIES})
+  target_link_libraries(random_mod PRIVATE ${OPENSSL_LIBRARIES})
 else()
   target_link_libraries(curl_mod curl)
   target_link_libraries(mysql_mod mysqlclient)
   target_link_libraries(zeromq_mod zmq)
   target_link_libraries(leveldb_mod leveldb)
+  target_link_libraries(random_mod crypto)
 endif()
 
 target_link_libraries(redis_mod hiredis)
