added json core module

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -78,7 +78,7 @@ add_library(numbers_mod SHARED
   ../src/array.c
   ../src/builtin.c
   ../src/callable.c
- ../src/check.c
+  ../src/check.c
   ../src/chunk.c
   ../src/utils.c
   ../src/error.c
@@ -232,6 +232,28 @@ add_library(encoding_mod SHARED
 
 add_library(socket_mod SHARED
   socket.c
+  ../src/array.c
+  ../src/builtin.c
+  ../src/callable.c
+  ../src/check.c
+  ../src/chunk.c
+  ../src/utils.c
+  ../src/error.c
+  ../src/iterable.c
+  ../src/iterator.c
+  ../src/memory.c
+  ../src/module.c
+  ../src/range.c
+  ../src/state.c
+  ../src/string_map.c
+  ../src/string.c
+  ../src/struct.c
+  ../src/userdata.c
+  ../src/value.c)
+
+add_library(json_mod SHARED
+  json.c
+  deps/cJSON.c
   ../src/array.c
   ../src/builtin.c
   ../src/callable.c
