--- a/disabled-workflows/release-with-extensions.yml
+++ b/disabled-workflows/release-with-extensions.yml
@@ -19,6 +19,7 @@ jobs:
         sudo apt-get install -y libgmp3-dev
         sudo apt-get install libzmq3-dev
         sudo apt-get install libleveldb-dev
+        sudo apt-get install libpcre3-dev
     - name: Installing dependency hiredis
       run: |
         git clone https://github.com/redis/hiredis.git
@@ -59,6 +60,7 @@ jobs:
         brew install gmp
         brew install zmq
         brew install leveldb
+        brew install pcre
     - name: Installing dependency hiredis
       run: |
         git clone https://github.com/redis/hiredis.git
@@ -98,6 +100,7 @@ jobs:
         vcpkg install gmp:x64-windows
         vcpkg install zeromq:x64-windows
         vcpkg install leveldb:x64-windows
+        vcpkg install pcre2:x64-windows
     - name: Installing dependency hiredis
       run: |
         git clone https://github.com/redis/hiredis.git
